feat: 활동 검색 기능 구현